--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,7 +1,144 @@
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<!--index.js추가-->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="/js/app/index.js"></script>
+<script>
+    function checkLeapYear(year) {
+        if(year%400 == 0) {
+            return true;
+        }else if(year%100 == 0) {
+            return false;
+        }else if(year%4 == 0) {
+            return true;
+        }else {
+            return false;
+        }
+    }
+
+    function getFirstDayOfWeek(year, month) {
+        if(month < 10) month = "0" + month;
+
+        return (new Date(year+"-"+month+"-01")).getDay();
+    }
+
+    function changeYearMonth(year, month) {
+        let month_day = [31,28,31,30,31,30,31,31,30,31,30,31];
+
+        if(month == 2) {
+            if(checkLeapYear(year)) month_day[1] = 29;
+        }
+
+        let first_day_of_week = getFirstDayOfWeek(year, month);
+        let arr_calendar = [];
+        for(let i=0 ; i<first_day_of_week ; i++){
+            arr_calendar.push("");
+        }
+
+        for(let i=1 ; i<=month_day[month-1] ; i++) {
+            arr_calendar.push(String(i));
+        }
+
+        let remain_day = 7 - (arr_calendar.length%7);
+        if(remain_day < 7) {
+            for(let i=0 ; i<remain_day ; i++) {
+                arr_calendar.push("");
+            }
+        }
+
+        renderCalendar(arr_calendar);
+    }
+
+    function renderCalendar(data) {
+        let h = [];
+        for(let i =0 ; i<data.length ; i++) {
+            var sun = 1;
+            if(i==0) {
+                h.push('<tr>');
+            }else if(i%7 == 0) {
+                sun=2;
+                h.push('</tr>');
+                h.push('<tr>');
+            }else{
+                sun=1;
+            }
+
+            if(sun == 1){
+                h.push('<td onclick="setDate(' + data[i] + ');" style="cursor:pointer; height: 100px;">' + data[i] + '</td>');
+            }else{
+                h.push('<td onclick="setDate(' + data[i] + ');" style="cursor:pointer; height: 100px; color: red">' + data[i] + '</td>');
+            }
+
+        }
+
+        h.push('</tr>');
+
+        $("#tb_body").html(h.join(""));
+    }
+
+    function setDate(day) {
+        if(day<10) day = "0" + day;
+        $("#input_date").val(current_year + "-" + current_month + "-" + day);
+        var todate = new Date();
+        // $("#div_calendar").hide();
+    }
+
+    function changeMonth(diff) {
+        if(diff == undefined) {
+            current_month = parseInt($("#month").val());
+        }else {
+            current_month = current_month + diff;
+
+            if(current_month == 0) {
+                current_year = current_year - 1;
+                current_month = 12;
+            }else if(current_month == 13) {
+                current_year = current_year + 1;
+                current_month = 1;
+            }
+        }
+
+        loadCalendar();
+    }
+
+
+    function loadCalendar() {
+        $("#year").val(current_year);
+        $("#month").val(current_month);
+        changeYearMonth(current_year,current_month);
+    }
+
+    let current_year = (new Date()).getFullYear();
+    let current_month = (new Date()).getMonth() + 1;
+
+    $("#year").val(current_year);
+    $("#month").val(current_month);
+
+    changeYearMonth(current_year,current_month);
+
+    $("#input_date").click(function(){
+        $("#div_calendar").toggle();
+    });
+
+
+</script>
+<!--<header style="width:700px;height:300px;">-->
+<!--    <img src="image/qwer.jpg" style="width: 500px;">-->
+<!--</header>-->
+<!--<nav>-->
+<!--    메인 메뉴-->
+<!--    <ul>-->
+<!--        <li><a href="http://www.naver.com/">Naver</a></li>-->
+<!--        <li><a href="https://www.google.com/">Google</a></li>-->
+<!--        <li><a href="https://www.youtube.com/">Youtube</a></li>-->
+<!--        <li><a href="https://www.netflix.com/browse">Netflix</a></li>-->
+<!--        <li><a href="https://www.tving.com/main.do">Tving</a></li>-->
+<!--    </ul>-->
+
+<!--</nav>-->
+<!--<section>-->
+<!--    <div id="map" style="width:500px;height:400px;"></div>-->
+<!--    <input type ="text" placeholder="검색어를 입력하세요." style="width:700px;height:80px;font-size:30px;margin-left: 100px;">-->
+<!--    <input type ="button" value="검색" style="width:100px;height:80px;">-->
+<!--</section>-->
+<!--<footer></footer>-->
 </body>
 </html>
