--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -1,8 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>스프링 부트 웹 서비스</title>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <link rel="stylesheet" href="httPs://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Main</title>
+    <script type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <style>
+        body{width: 90%; height: 1000px; margin-left:5%; margin-right: 5%; background-color: burlywood;}
+        header{margin-top: 40px;  width: 100%; height: 200px; border-bottom: black 1px solid }
+        #header_photo{width: 170px; height: 170px;
+            margin-left: 5px;
+            border: 1px solid #AAA;
+            display:block;
+            float: left;}
+        #header_a{display: inline; float: right; width: 200px;  }
+        #header_a > a{margin-right: 3%;}
+        #header_title{text-align: center; margin-top: 3%; margin-right: 15%; font-size: 50px; font-style: italic;}
+        #header_ment{
+            margin-left: 13%;
+            display:inline;
+            width: 300px;
+            height: 25px;
+            padding: 5px;
+            background-color: white;
+            animation-duration: 3s;
+            animation-name: slidein;
+            animation-iteration-count: 3;
+            animation-direction: alternate;
+            animation-timing-function: ease-in-out;}
+        @keyframes slidein{
+            from {margin-left: 50%; width: 400px; background-color: white;}
+            to{ margin-left:10%; width: 200px; background-color: fuchsia;}
+        }
+        nav{ width: 20%; height: 700px; float:left;border-right: 1px solid black }
+        nav > ul >li{margin-top: 20%; margin-bottom: 15%; font-size: 20px;}
+        a{text-decoration: none; color: black;}
+        a:hover{color: aquamarine;}
+        a:active{color: rebeccapurple}
+        #cal{width: 80%; height: 80%; float: right; }
+        footer{width:100%; height: 100px;  float:left;  }
+    </style>
+    <!--    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a22ead09434c3954f865c7cfc16aef11"></script>-->
+    <!--    <script>-->
+    <!--        var container = document.getElementById('map');-->
+    <!--        var options = {-->
+    <!--            center: new kakao.maps.LatLng(33.450701, 126.570667),-->
+    <!--            level: 3-->
+    <!--        };-->
+
+    <!--        var map = new kakao.maps.Map(container, options);-->
+    <!--    </script>-->
 </head>
-<body>
+<body style="background-color: bisque;">
