--- a/src/main/resources/templates/posts-save.mustache
+++ b/src/main/resources/templates/posts-save.mustache
@@ -1,28 +1,76 @@
 
-{{>layout/header}} //
+{{>layout/header}}
 
-<h1>게시글 등록</h1>
-    <div class="col-md-12">
-            <div class="col-md-4">
-                <form>
-                    <div class="form-group">
-                        <label for="title">제목</label>
-                        <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요">
-                    </div>
-                    <div class="form-group">
-                        <label for="author">작성자</label>
-                        <input type="text" class="form-control" id="author" placeholder="작성자를 입력하세요">
-                    </div>
-                    <div clss="form-group">
-                        <label for="content">내용</label>
-                        <textarea type="text" class="form-control" id="content" placeholder="내용을 입력하세요"></textarea>
-                    </div>
-                </form>
-
-                <a href="/" role="button" class="btn btn=secondary">취소</a>
-                <button type="button" class="btn btn-primary" id="btn-save">등록</button>
-
-            </div>
+<header>
+    <div id="header_photo"><input type="file" name="upic" /></div>
+    <div id="header_ment">OOO님 힘내세요!!</div>
+    <div id="header_a">
+        <a href="#">로그인</a> / <a href="#">회원 가입</a>
     </div>
+    <div id="header_title">MyMeMo</div>
+</header>
+<nav>
+    <ul>
+        <li><a href="#"> 일정 관리(캘린더)</a></li>
+        <li><a href="#"> 숙제 생성(알림)</a></li>
+        <li><a href="#"> 위시리스트(필요한 물건)</a></li>
+        <li><a href="#"> 휴식 타이머(알람)</a></li>
+        <li><a href="#"> 메모(게시판형식)</a></li>
+        <li><a href="#"> 명언 등록/조회하기</a></li>
+    </ul>
+</nav>
+<section id="cal">
+    <div style="margin-top: 50px; margin-left: 30px">
+        <form>
+            <div class="form-group">
+                <label for="title">날짜</label>
+                <input type="text" class="form-control" id="dateTime" placeholder="날짜를 선택하세요" value="2021/10/01" readonly>
+            </div>
+            <div class="form-group">
+                <label for="title">제목</label>
+                <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요">
+            </div>
+            <div class="form-group">
+                <label for="author">작성자</label>
+                <input type="text" class="form-control" id="author" placeholder="작성자를 입력하세요">
+            </div>
+            <div clss="form-group">
+                <label for="content">내용</label>
+                <textarea type="text" class="form-control" id="content" placeholder="내용을 입력하세요"></textarea>
+            </div>
+        </form>
+
+    </div>
+    <button type="button" class="btn btn-primary" id="btn-save">등록</button>
+    <a href="/" role="button" class="btn btn=secondary">취소</a>
+</section>
+<footer>
+    <div style="font-size: 25px; text-align: center;">Web Developer LJW </div>
+
+</footer>
+
+<!--<h1>게시글 등록</h1>-->
+<!--    <div class="col-md-12">-->
+<!--            <div class="col-md-4">-->
+<!--                <form>-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="title">제목</label>-->
+<!--                        <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요">-->
+<!--                    </div>-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="author">작성자</label>-->
+<!--                        <input type="text" class="form-control" id="author" placeholder="작성자를 입력하세요">-->
+<!--                    </div>-->
+<!--                    <div clss="form-group">-->
+<!--                        <label for="content">내용</label>-->
+<!--                        <textarea type="text" class="form-control" id="content" placeholder="내용을 입력하세요"></textarea>-->
+<!--                    </div>-->
+<!--                </form>-->
+
+<!--                <a href="/" role="button" class="btn btn=secondary">취소</a>-->
+<!--                <button type="button" class="btn btn-primary" id="btn-save">등록</button>-->
+
+<!--            </div>-->
+<!--    </div>-->
 
 {{>layout/footer}}
