--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,5 +1,4 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="/js/app/index.js"></script>
 <script>
     function checkLeapYear(year) {
@@ -62,12 +61,14 @@
             }
 
             if(sun == 1){
-                h.push('<td onclick="setDate(' + data[i] + ');" style="cursor:pointer; height: 100px;">' + data[i] + '</td>');
+                h.push('<td onclick="setDate(' + data[i] + ');" style="cursor:pointer; ">' + data[i] + '</td>');
             }else{
-                h.push('<td onclick="setDate(' + data[i] + ');" style="cursor:pointer; height: 100px; color: red">' + data[i] + '</td>');
+                h.push('<td onclick="setDate(' + data[i] + ');" style="cursor:pointer;color: red">' + data[i] + '</td>');
             }
 
         }
+
+
 
         h.push('</tr>');
 
@@ -76,9 +77,10 @@
 
     function setDate(day) {
         if(day<10) day = "0" + day;
-        $("#input_date").val(current_year + "-" + current_month + "-" + day);
+        var inputDate = $("#inputDate").val(current_year + "-" + current_month + "-" + day);
         var todate = new Date();
         // $("#div_calendar").hide();
+        return inputDate;
     }
 
     function changeMonth(diff) {
@@ -114,9 +116,9 @@
 
     changeYearMonth(current_year,current_month);
 
-    $("#input_date").click(function(){
-        $("#div_calendar").toggle();
-    });
+    // $("#input_date").click(function(){
+    //     $("#div_calendar").toggle();
+    // });
 
 
 </script>
