--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Main</title>
-    <script type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <style>
         body{width: 90%; height: 1000px; margin-left:5%; margin-right: 5%; background-color: burlywood;}
@@ -38,8 +36,21 @@
         a{text-decoration: none; color: black;}
         a:hover{color: aquamarine;}
         a:active{color: rebeccapurple}
-        #cal{width: 80%; height: 80%; float: right; }
+        #cal2{width: 30%; height: 70%; float: left; }
+        #cal{width: 25%; height: 70%; float: left; }
         footer{width:100%; height: 100px;  float:left;  }
+        th{width: 30px; height: 30px;}
+        .form-group{margin-top: 10px; display: block}
+        .form-control{display: inline;}
+        .btn {
+            border:1px solid #ff0080;    /*---테두리 정의---*/
+            background-Color:#ffe6f2;   /*--백그라운드 정의---*/
+            font:18px 굴림;      /*--폰트 정의---*/
+            font-weight:bold;   /*--폰트 굵기---*/
+            color:#ff0080;    /*--폰트 색깔---*/
+            width:130px;
+            height:50px;  /*--버튼 크기---*/
+        }
     </style>
     <!--    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a22ead09434c3954f865c7cfc16aef11"></script>-->
     <!--    <script>-->
