--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -11,7 +11,9 @@
         {{/userName}}
         {{^userName}}
             <a href="/oauth2/authorization/google" role="button">Google Login</a>
+            <a href="/oauth2/authorization/naver" role="button">Naver Login</a>
         {{/userName}}
+        <br><br>
         <a href="/loginform" role="button" class="btn" >로그인</a>  /  <a href="#" role="button" class="btn" >회원 가입</a>
     </div>
     <div id="header_title">MyMeMo</div>
